Modifying and rewriting software/hw3.txt
Q1: Brady's patch removed the line "case_long_iso_time_style:
"becasue it was doing the same thing as the previous line, it
 was redundant. It was not necessary to remove that line beca
use the first case had nothing under it so it would just go to
 the next case directly.

Q2: Yes this new version of Coreutils might cause the problem
 that in some countries users don't understand English will be
 confused. But the command we added from the patch:dcgettext
 actually has the function of translating string into user's
 native language. So if we can set up user's native language,
 this will not be a problem.

Q3:
Using command: python randline.py -n 3 /dev/null
It generates the following result:
Traceback (most recent call last):
  File "randline.py", line 70, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/lib64/python2.6/random.py", line 261, in choice
    return seq[int(self.random() * len(seq))]  # raises\
 IndexError if seq is empty
IndexError: list index out of range

The file /dev/null that we passed is an empty file. Therefore,
 when randline.py tries to get random lines from the file, it 
fails to index the content because there are no lines in the file.

Q4:
Using the commands:
export PATH=/usr/local/cs/bin:$PATH
python3 randline.py -n 3 lab3.txt
It generates the following results:
 File "randline.py", line 65
     except IOError as (errno, strerror):
                           ^
			   SyntaxError: invalid syntax

It seems like python3 reads different syntax from python and
 python2. There for an interpretation erron occurred.
